docs: finalize status/changelog split and roadmap progress guardrails
- remove historical delta suffixes from STATUS current-state bullets

- keep roadmap focused on planning and add explicit progress-recalculation rule

- extend markdown consistency tests for status history bans and roadmap guardrails

- update documentation test counters to 162 total / 12 markdown consistency tests